--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ name = "EAIK"
 description = "Toolbox for Efficient Analytical Inverse Kinematics by Subproblem Decomposition."
 readme= "README.md"
 authors = [{ name = "Daniel Ostermeier", email = "daniel.sebastian.ostermeier@tum.de" }]
-license = {file = "LICENSE"}
+license = "BSD-3-Clause"
+license-files = ["LICENSE"]
 classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
@@ -25,6 +26,6 @@ requires-python = ">=3.9"
 version="1.2.1"
 
 [project.urls]
-GitHub = "https://github.com/OstermD/EAIK"
 Homepage = "https://ostermd.github.io/EAIK/"
-Paper-Preprint = "https://arxiv.org/abs/2409.14815" 
+GitHub = "https://github.com/OstermD/EAIK"
+Paper = "https://ieeexplore.ieee.org/document/11122599" 
