--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "CPP/external/ik-geo"]
 	path = CPP/external/ik-geo
-	url = git@github.com:OstermD/ik-geo.git
+	url = https://github.com/OstermD/ik-geo.git
